--- a/src/components/Profile/profile.module.css
+++ b/src/components/Profile/profile.module.css
@@ -1,10 +1,12 @@
 .profileSection {
+  padding: 40px;
   width: 100%;
   height: 100%;
   color: rgb(191, 191, 191);
   display: flex;
   justify-content: center;
   color: black;
+  background-color: rgba(238, 238, 238, 0.786);
 }
 
 p {
@@ -12,9 +14,10 @@ p {
 }
 
 .profile {
-  background-color: rgb(230, 230, 230);
-  width: 650px;
-  height: 1020px;
+  padding-top: 40px;
+  background-color: rgb(255, 255, 255);
+  width: 340px;
+  height: 382px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,8 +32,56 @@ p {
 }
 
 .avatar {
+  padding-top: 15px;
   width: 130px;
   height: 130px;
   border-radius: 50%;
   background-color: aliceblue;
+}
+
+.name {
+  padding-top: 20px;
+  color: #2d2d2d;
+  font-size: 35px;
+  line-height: 1.5;
+}
+
+.tag {
+  padding-top: 10px;
+  color: #8d8d8d;
+  font-size: 25px;
+  line-height: 1.2;
+}
+
+.location {
+  padding-top: 10px;
+  color: #8d8d8d;
+  font-size: 25px;
+  line-height: 1.2;
+}
+
+.stats {
+  display: flex;
+  /* gap: 15px; */
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+}
+
+.li {
+  width: 90px;
+  height: 50px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 15px;
+  line-height: 1.2;
+  border: 1px solid #2d2d2d;
+}
+
+.label {
+  color: #8d8d8d;
 }
